# UDPServer

./: CMakeLists.txt  README.md  icon.rc  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui  mainwin2.cpp  mainwin2.h  mainwin2.ui  myudpserver.cpp  myudpserver.h  qrc.qrc  receiverecodewgt.cpp  receiverecodewgt.h  receiverecodewgt.ui
NetWorkWgts/: AbstractWgt.cpp  AbstractWgt.h
