cmake_minimum_required(VERSION 3.5)

project(UDPServer VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt6 COMPONENTS Network REQUIRED)

find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,/usr/local/Qt6.0/lib")




set(PROJECT_SOURCES
        main.cpp



        icon.rc
)

set(ICON_PATH "bm_10.ico")
if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(UDPServer
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}

        mainwin2.h mainwin2.cpp mainwin2.ui
        qrc.qrc
        ../../../Library/Logger/baselogger.cpp ../../../Library/Logger/baselogger.h ../../../Library/Logger/log.cpp ../../../Library/Logger/log.h
        receiverecodewgt.ui receiverecodewgt.h receiverecodewgt.cpp

    )

## 添加图标

#qt_add_executable(UDPServer WIN32 ${SRC_LIST} ${ICON_PATH})

# Define target properties for Android with Qt 6 as:
#    set_property(TARGET UDPServer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(UDPServer SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(UDPServer
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(UDPServer PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
#
target_link_libraries(UDPServer PRIVATE Qt6::Network)


# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.UDPServer)
endif()
set_target_properties(UDPServer PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS UDPServer
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(UDPServer)
endif()
